# HydroCouple

./: .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  HydroCouple.cd  HydroCouple.pro  HydroCouple.pro.user.0824834  HydroCouple.pro.user.b0327ba  HydroCouple.vcxproj  HydroCouple.vcxproj.filters  HydroCoupleSpatial.cd  HydroCoupleTemporal.cd  HydroCouple_resource.rc  License.md  Makefile  Makefile.Debug  Makefile.Release  README.md  hydrocouple.h  iadaptedoutput.h  iadaptedoutputfactory.h  iadaptedoutputfactorycomponent.h  iadaptedoutputfactorycomponentinfo.h  iargument.h  icategory.h  icomponentinfo.h  icomponentitem.h  icomponentstatuschangeeventargs.h  idescription.h  idimension.h  iexchangeitem.h  iexchangeitemchangeeventargs.h  iidentity.h  iinput.h  imodelcomponent.h  imodelcomponentinfo.h  install.sh  ioutput.h  ipropertychanged.h  iquality.h  (+7 more)
.github/workflows/: build_and_package.yml  build_docs.yml  nuget_install.yml
cmake/: HydroCoupleConfig.cmake.in
docs/: CNAME  Doxyfile  example1.md  homepage.md  hydrocouple.md
docs/custom/css/: doxygen-awesome.css
docs/custom/html/: header.html
docs/html/: _d_k_2_r_e_a_d_m_e_8md.html  _d_k_2include_2stdafx_8h.html  _d_k_2include_2stdafx_8h__dep__incl.map  _d_k_2include_2stdafx_8h__dep__incl.md5  _d_k_2include_2stdafx_8h_source.html  _d_k_2src_2stdafx_8cpp.html  _d_k_2src_2stdafx_8cpp__incl.map  _d_k_2src_2stdafx_8cpp__incl.md5  _r_e_a_d_m_e_8md.html  _readme_8md.html  _readme_8md_source.html  _z_1_2_documents_2_projects_2_hydro_couple_2_hydro_couple_2include_2hydrocouple_8h-example.html  abstractmodelcomponent_8cpp.html  abstractmodelcomponent_8cpp__incl.map  abstractmodelcomponent_8cpp__incl.md5  abstractmodelcomponent_8h.html  abstractmodelcomponent_8h__dep__incl.map  abstractmodelcomponent_8h__dep__incl.md5  abstractmodelcomponent_8h__incl.map  abstractmodelcomponent_8h__incl.md5  abstractmodelcomponent_8h_source.html  annotated.html  annotated_dup.js  bug.html  class_abstract_model_component-members.html  class_abstract_model_component.html  class_abstract_model_component.js  class_abstract_model_component__inherit__graph.map  class_abstract_model_component__inherit__graph.md5  class_abstract_model_component_aadfe65c4af520f8c8a21a3f686b6a838_cgraph.map  class_abstract_model_component_aadfe65c4af520f8c8a21a3f686b6a838_cgraph.md5  class_abstract_model_component_ac42477c253e82a0dbb9cf2595c4e3542_cgraph.map  class_abstract_model_component_ac42477c253e82a0dbb9cf2595c4e3542_cgraph.md5  class_abstract_model_component_adeeb4de83e6ffafd38332ba5c4580fc9_icgraph.map  class_abstract_model_component_adeeb4de83e6ffafd38332ba5c4580fc9_icgraph.md5  class_component_info-members.html  class_component_info.html  class_component_info.js  class_component_info__coll__graph.map  class_component_info__coll__graph.md5  (+1865 more)
docs/html/d0/d18/: class_hydro_couple_1_1_i_quantity__inherit__graph.md5
docs/html/d0/d1b/: struct_linear_ring_m.html  struct_linear_ring_m.js
docs/html/d0/d1c/: class_hydro_couple_1_1_i_identity-members.html
docs/html/d0/d21/: class_hydro_couple_1_1_i_argument__coll__graph.map
docs/html/d0/d22/: struct_w_k_b_multi_polygon_m.html  struct_w_k_b_multi_polygon_m.js
docs/html/d0/d45/: class_hydro_couple_1_1_spatial_1_1_i_regular_grid3_d-members.html
docs/html/d0/d4a/: class_hydro_couple_1_1_i_component_status_change_event_args.html  class_hydro_couple_1_1_i_component_status_change_event_args.js
docs/html/d0/d4d/: union_w_k_b_geometry_z-members.html
docs/html/d0/d5c/: struct_w_k_b_polyhedral_surface_m.html  struct_w_k_b_polyhedral_surface_m.js
docs/html/d0/d5d/: struct_w_k_b_polygon_m.html  struct_w_k_b_polygon_m.js
docs/html/d0/d61/: class_hydro_couple_1_1_spatio_temporal_1_1_i_time_raster_component_data_item__inherit__graph.map  class_hydro_couple_1_1_spatio_temporal_1_1_i_time_raster_component_data_item__inherit__graph.md5
docs/html/d0/d66/: class_hydro_couple_1_1_spatial_1_1_i_regular_grid2_d.html  class_hydro_couple_1_1_spatial_1_1_i_regular_grid2_d.js
docs/html/d0/d69/: struct_w_k_b_multi_point_z_m-members.html
docs/html/d0/d82/: struct_w_k_b_multi_line_string_m.html  struct_w_k_b_multi_line_string_m.js
docs/html/d0/d9c/: class_hydro_couple_1_1_i_cloneable_model_component-members.html
docs/html/d0/dac/: struct_w_k_b_polygon_z_m.html  struct_w_k_b_polygon_z_m.js
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  enumvalues_0.js  (+76 more)
include/: hydrocouple.h  hydrocouplespatial.h  hydrocouplespatialwkb.h  hydrocouplespatiotemporal.h  hydrocoupletemporal.h  hydrocoupletemporal.h.autosave  stdafx.h  version.h.in
lib/: libHydroCouple.1.0.0.dylib  libHydroCouple.1.0.dylib
src/: HydroCouple.sln  HydroCouple.vcxproj  HydroCouple.vcxproj.filters  hydrocouple.h  iadaptedproducerexchangeitem.h  iadaptedproducerexchangeitemfactory.h  iadaptedproducerexchangeitemfactorycomponent.h  iadaptedproducerexchangeitemfactorycomponentinfo.h  iargument.h  icategory.h  icomponentexchangeitem.h  icomponentinfo.h  icomponentitem.h  icomponentitemchangeevent.h  icomponentstatuschangeevent.h  iconsumerexchangeitem.h  icurve.h  idescription.h  idimension.h  igeometry.h  igeometryargument.h  igeometrycollection.h  igeometrycomponentitem.h  igeometryexchangeitem.h  iidentity.h  iline.h  ilinearring.h  ilinestring.h  imodelcomponent.h  imodelcomponentinfo.h  imulticonsumerexchangeitem.h  imulticurve.h  imultilinestring.h  imultipoint.h  imultipolygon.h  imultisurface.h  ipoint.h  ipolygon.h  ipolyhedralsurface.h  iproducerexchangeitem.h  (+30 more)
uml/: HydroCouple.cd  HydroCoupleSpatial.cd  HydroCoupleTemporal.cd  adaptedOutputfactory.cd  componentdataitem.cd  componentinfo.cd  featureaccess.cd  modelcomponent.cd
(+777 files in other folders)
